# AntSimulation26

./: .releaserc.json  CLAUDE.md  Cargo.toml  Makefile  OPUS_REVIEW.md  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-12-opus-review-fixes.md  2026-04-12-seblague-comprehensive-upgrade.md
docs/superpowers/specs/: 2026-04-12-seblague-comprehensive-upgrade-design.md
src/: ant.rs  config.rs  food.rs  main.rs  noise.rs  pheromone.rs  render.rs  sim_config.rs  terrain.rs  ui.rs  world.rs
