[package]
name = "ant_simulation"
version = "0.1.0"
edition = "2021"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "x11",
    "multi_threaded",
    "webgl2",
] }
bytemuck = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
